Fixed up spacing issues in the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,13 +468,17 @@ footer li {
   padding-block: .5rem;
 }
 
-.contact_title {
-  padding-block: .5rem 0px;
+.contact-title {
+  padding-block: .5rem 0.25px;
+  font-weight: bold;
 }
 
-.contact_info-title {
-  display: block;
-  font-weight: bold;
+.contact-content {
+  padding-block: 0 1rem;
+}
+
+.contact-content-hours {
+  padding-block: 0.25rem 0;
 }
 
 .hours {
@@ -502,7 +506,6 @@ footer li {
     padding-block-start: .5rem;
   }
 
-  .contact_title li,
   .hours li {
     padding-block: 0 0.25rem;
   }
